--- a/Sketch/Sketch/sketch.ui
+++ b/Sketch/Sketch/sketch.ui
@@ -491,6 +491,14 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="statusTip">
      <string>functional type</string>
     </property>
